--- a/articles/azure-app-configuration/TOC.yml
+++ b/articles/azure-app-configuration/TOC.yml
@@ -171,7 +171,7 @@
         - name: Generador de .NET Framework
           href: 'https://go.microsoft.com/fwlink/?linkid=2074663'
         - name: Proveedor de Java Spring
-          href: 'https://github.com/Azure/azure-sdk-for-java/tree/master/sdk/appconfiguration'
+          href: 'https://go.microsoft.com/fwlink/?linkid=2180917'
         - name: SDK de Azure para .NET
           href: 'https://go.microsoft.com/fwlink/?linkid=2092056'
         - name: SDK de Azure para Java
