--- a/articles/azure-resource-manager/management/toc.yml
+++ b/articles/azure-resource-manager/management/toc.yml
@@ -81,6 +81,8 @@
                   href: ../../postgresql/howto-move-regions-portal.md?toc=/azure/azure-resource-manager/management/toc.json
                 - name: Azure Event Hubs
                   href: ../../event-hubs/move-across-regions.md?toc=/azure/azure-resource-manager/management/toc.json
+                - name: Azure Functions
+                  href: ../../azure-functions/functions-move-across-regions.md?toc=/azure/azure-resource-manager/management/toc.json
                 - name: Azure IoT Hub
                   href: ../../iot-hub/iot-hub-how-to-clone.md?toc=/azure/azure-resource-manager/management/toc.json
                 - name: Azure Resource Manager
@@ -135,7 +137,7 @@
           href: manage-private-link-access-rest.md
     - name: Administración de grupos de recursos
       items:
-        - name: Azure portal
+        - name: Portal de Azure
           displayName: 'create,list,open,delete,deploy,move,lock,tag,export'
           href: manage-resource-groups-portal.md
         - name: Azure CLI
@@ -146,7 +148,7 @@
           href: manage-resource-groups-powershell.md
     - name: Administrar recursos
       items:
-        - name: Azure portal
+        - name: Portal de Azure
           displayName: 'open,delete,deploy,move,lock,tag,monitor'
           href: manage-resources-portal.md
         - name: Azure CLI
