--- a/articles/migrate/toc.yml
+++ b/articles/migrate/toc.yml
@@ -86,6 +86,8 @@
           href: tutorial-app-containerization-aspnet-app-service.md
         - name: Inclusión de aplicaciones web Java en contenedores y migración a App Service
           href: tutorial-app-containerization-java-app-service.md
+        - name: "CI/CD para operaciones del día\_2"
+          href: tutorial-app-containerization-azure-pipeline.md
 - name: Conceptos
   items:
     - name: General
