--- a/articles/frontdoor/standard-premium/TOC.yml
+++ b/articles/frontdoor/standard-premium/TOC.yml
@@ -4,6 +4,8 @@
   items:
     - name: ¿Qué es Azure Front Door Standard/Premium (versión preliminar)?
       href: overview.md
+    - name: Elección del equilibrador de carga correcto
+      href: /architecture/guide/technology-choices/load-balancing-overview.md?toc=%2fazure%2ffrontdoor%2fstandard-premium%2ftoc.json
     - name: Comparación de niveles
       href: tier-comparison.md
 - name: Guías de inicio rápido
@@ -17,86 +19,130 @@
       href: ../front-door-quickstart-template-samples.md?toc=%2fazure%2ffrontdoor%2fstandard-premium%2ftoc.json
 - name: Tutoriales
   items:
-    - name: Configuración de directiva de firewall de aplicaciones web
-      href: ../../web-application-firewall/afds/waf-front-door-create-portal.md?toc=%2fazure%2ffrontdoor%2fstandard-premium%2ftoc.json
+    - name: Configuración de encabezados de seguridad con un motor de reglas
+      href: ../front-door-security-headers.md?toc=%2fazure%2ffrontdoor%2fstandard-premium%2ftoc.json
 - name: Conceptos
   items:
-    - name: Preguntas más frecuentes sobre Front Door
-      href: faq.md
-    - name: Endpoint Manager
+    - name: Front Door Manager
       href: concept-endpoint-manager.md
-    - name: Origen
-      href: concept-origin.md
-    - name: Ruta
-      href: concept-route.md
-    - name: Conjunto de reglas
-      items:
-        - name: Conjunto de reglas
-          href: concept-rule-set.md
-        - name: Condiciones de coincidencia
-          href: concept-rule-set-match-conditions.md
-        - name: Acciones
-          href: concept-rule-set-actions.md
-        - name: Redireccionamiento y reescritura de URL
-          href: concept-rule-set-url-redirect-and-rewrite.md
-    - name: Filtrado geográfico
-      href: geo-filtering.md
-    - name: Sondeos de estado
-      href: concept-health-probes.md
-    - name: Private Link
-      href: concept-private-link.md
     - name: Almacenamiento en memoria caché
       href: concept-caching.md
-    - name: DDoS
-      href: concept-ddos.md
+    - name: Enrutamiento
+      items:
+        - name: Arquitectura de enrutamiento
+          href: ../front-door-routing-architecture.md?toc=%2fazure%2ffrontdoor%2fstandard-premium%2ftoc.json
+        - name: Búsqueda de coincidencia de ruta
+          href: concept-route.md
+    - name: Origen
+      href: concept-origin.md
+    - name: Sondeos de estado
+      href: ../front-door-health-probes.md?toc=%2fazure%2ffrontdoor%2fstandard-premium%2ftoc.json
+    - name: Dominio con comodín
+      href: ../front-door-wildcard-domain.md?toc=%2fazure%2ffrontdoor%2fstandard-premium%2ftoc.json
+    - name: Conjunto de reglas
+      items:
+        - name: Arquitectura del motor de reglas
+          href: concept-rule-set.md
+        - name: Condiciones de coincidencia de reglas
+          href: concept-rule-set-match-conditions.md
+        - name: Acciones de reglas
+          href: concept-rule-set-actions.md
+    - name: Redireccionamiento y reescritura de URL
+      href: concept-rule-set-url-redirect-and-rewrite.md
+    - name: Seguridad
+      items:
+        - name: Línea de base de seguridad
+          href: /security/benchmark/azure/baselines/front-door-security-baseline?toc=/azure/frontdoor/standard-premium/TOC.json
+        - name: DDoS
+          href: ../front-door-ddos.md?toc=%2fazure%2ffrontdoor%2fstandard-premium%2ftoc.json
+        - name: Cifrado TLS de un extremo a otro
+          href: ../concept-end-to-end-tls.md?toc=%2fazure%2ffrontdoor%2fstandard-premium%2ftoc.json
+        - name: Private Link
+          href: concept-private-link.md
+        - name: Firewall de aplicaciones web
+          items:
+            - name: Ajuste
+              href: ../../web-application-firewall/afds/waf-front-door-tuning.md?toc=%2fazure%2ffrontdoor%2fstandard-premium%2ftoc.json
+            - name: Reglas administradas
+              href: ../../web-application-firewall/afds/waf-front-door-drs.md?toc=%2fazure%2ffrontdoor%2fstandard-premium%2ftoc.json
+            - name: Reglas personalizadas
+              href: ../../web-application-firewall/afds/waf-front-door-custom-rules.md?toc=%2fazure%2ffrontdoor%2fstandard-premium%2ftoc.json
+            - name: Listas de exclusión
+              href: ../../web-application-firewall/afds/waf-front-door-exclusion.md?toc=%2fazure%2ffrontdoor%2fstandard-premium%2ftoc.json
+            - name: Configuración de directiva
+              href: ../../web-application-firewall/afds/waf-front-door-policy-settings.md?toc=%2fazure%2ffrontdoor%2fstandard-premium%2ftoc.json
+            - name: Filtrado geográfico
+              href: ../front-door-geo-filtering.md?toc=%2fazure%2ffrontdoor%2fstandard-premium%2ftoc.json
+    - name: Protocolo
+      items:
+        - name: HTTP/2
+          href: ../front-door-http2.md?toc=%2fazure%2ffrontdoor%2fstandard-premium%2ftoc.json
+    - name: Preguntas más frecuentes
+      href: faq.md
 - name: Guías paso a paso
   items:
-    - name: Configuración de Endpoint Manager
-      href: how-to-configure-endpoint-manager.md
-    - name: Configuración de grupos de origen
-      href: how-to-create-origin.md
-    - name: Adición de un dominio personalizado
-      href: how-to-add-custom-domain.md
-    - name: Habilitar HTTPS para un dominio personalizado
-      href: how-to-configure-https-custom-domain.md
-    - name: Asociación de rutas
-      href: how-to-configure-route.md
-    - name: Configuración de un conjunto de reglas
-      href: how-to-configure-rule-set.md
-    - name: Configuración de encabezados de seguridad con un conjunto de reglas
-      href: how-to-add-security-headers.md
-    - name: Purga de la memoria caché
-      href: how-to-cache-purge.md
-    - name: Compresión
-      href: how-to-compression.md
-    - name: Habilitación de Private Link
+    - name: Configuración
       items:
-        - name: Conexión de un equilibrador de carga interno
-          href: how-to-enable-private-link-internal-load-balancer.md
-        - name: Conexión a una cuenta de almacenamiento
-          href: how-to-enable-private-link-storage-account.md
-        - name: Conexión a una aplicación web
-          href: how-to-enable-private-link-web-app.md
-    - name: Registro
-      href: how-to-logs.md
-    - name: Supervisión y alertas
-      href: how-to-monitor-metrics.md
-    - name: Informes
-      href: how-to-reports.md
+        - name: Configuración de Front Door Manager
+          href: how-to-configure-endpoint-manager.md
+        - name: Adición de un dominio personalizado
+          href: how-to-add-custom-domain.md
+        - name: Configuración de HTTPS en un dominio personalizado
+          href: how-to-configure-https-custom-domain.md
+        - name: Configuración de grupos de origen
+          href: how-to-create-origin.md
+        - name: Configuración de una ruta
+          href: how-to-configure-route.md
+        - name: Configuración de un motor de reglas
+          href: how-to-configure-rule-set.md
+        - name: Purga de caché
+          href: how-to-cache-purge.md
+        - name: Configuración del uso compartido de recursos entre orígenes
+          href: troubleshoot-cross-origin-resources.md
+        - name: Configuración de la compresión
+          href: how-to-compression.md
+    - name: Seguridad
+      items:
+        - name: Configuración del firewall de aplicaciones web
+          items:
+            - name: Configuración de una directiva de seguridad
+              href: ../../web-application-firewall/afds/waf-front-door-create-portal.md?toc=%2fazure%2ffrontdoor%2fstandard-premium%2ftoc.json
+            - name: Configuración del filtrado geográfico
+              href: ../front-door-tutorial-geo-filtering.md?toc=%2fazure%2ffrontdoor%2fstandard-premium%2ftoc.json
+            - name: Configuración de límites de velocidad
+              href: ../../web-application-firewall/afds/waf-front-door-rate-limit-powershell.md?toc=%2fazure%2ffrontdoor%2fstandard-premium%2ftoc.json
+            - name: "Configuración restricción de\_IP"
+              href: ../../web-application-firewall/afds/waf-front-door-configure-ip-restriction.md?toc=%2fazure%2ffrontdoor%2fstandard-premium%2ftoc.json
+        - name: Habilitación de Private Link para proteger el origen
+          items:
+            - name: Conexión de un equilibrador de carga interno
+              href: how-to-enable-private-link-internal-load-balancer.md
+            - name: Conexión a una cuenta de almacenamiento
+              href: how-to-enable-private-link-storage-account.md
+            - name: Conexión a una aplicación web
+              href: how-to-enable-private-link-web-app.md
+    - name: Supervisión e informes
+      items:
+        - name: Configuración de registros de diagnóstico
+          href: how-to-logs.md
+        - name: Configuración de supervisión y alertas
+          href: how-to-monitor-metrics.md
+        - name: Visualización de informes de Front Door
+          href: how-to-reports.md
     - name: Solución de problemas
       items:
-        - name: Problemas de enrutamiento
+        - name: Solución de problemas de enrutamiento
           href: troubleshoot-route-issues.md
-        - name: Compresión
-          href: troubleshoot-compression.md
-        - name: Uso compartido de recursos entre orígenes
-          href: troubleshoot-cross-origin-resources.md
-        - name: Ofertas de suscripción y límite de ancho de banda de red
-          href: subscription-offers.md
         - name: Entidades de certificación permitidas
           href: 'https://ccadb-public.secure.force.com/microsoft/IncludedCACertificateReportForMSFT'
+        - name: Compresión de archivos
+          href: troubleshoot-compression.md
+        - name: Ofertas de suscripción y límite de ancho de banda de red
+          href: subscription-offers.md
 - name: Referencia
   items:
+    - name: Compatibilidad con el protocolo de encabezados HTTP
+      href: ../front-door-http-headers-protocol.md?toc=%2fazure%2ffrontdoor%2fstandard-premium%2ftoc.json
     - name: Ubicaciones perimetrales de Azure Front Door
       items:
         - name: Ubicaciones perimetrales por región
