--- a/articles/search/TOC.yml
+++ b/articles/search/TOC.yml
@@ -126,6 +126,8 @@
       href: samples-rest.md
 - name: Conceptos
   items:
+    - name: Índices de búsqueda
+      href: search-what-is-an-index.md
     - name: Búsqueda de texto completo
       href: search-lucene-query-architecture.md
     - name: Analizadores
@@ -257,7 +259,7 @@
     - name: Índices
       items:
         - name: Creación de un índice
-          href: search-what-is-an-index.md
+          href: search-how-to-create-search-index.md
         - name: Creación de un índice para varios idiomas
           href: search-language-support.md
         - name: Sinónimos
@@ -306,7 +308,7 @@
               href: search-howto-managed-identities-data-sources.md
             - name: Azure Storage
               href: search-howto-managed-identities-storage.md
-            - name: Azure Cosmos DB
+            - name: "Azure Cosmos\_DB"
               href: search-howto-managed-identities-cosmos-db.md
             - name: SQL Database
               href: search-howto-managed-identities-sql.md
