--- a/articles/frontdoor/TOC.yml
+++ b/articles/frontdoor/TOC.yml
@@ -53,7 +53,7 @@
         - name: Arquitectura del motor de reglas
           href: front-door-rules-engine.md
         - name: Condiciones de coincidencia de reglas
-          href: front-door-rules-engine-match-conditions.md
+          href: rules-match-conditions.md
         - name: Acciones de reglas
           href: front-door-rules-engine-actions.md
     - name: Reescritura de direcciones URL
