--- a/articles/index.yml
+++ b/articles/index.yml
@@ -423,6 +423,12 @@ productDirectory:
         - compute
         - featured
       url: /azure/quantum/
+    - title: Máquinas virtuales de Azure Spot
+      summary: Aprovisionamiento de capacidad de proceso sin usar con descuentos considerables para ejecutar cargas de trabajo que no se pueden interrumpir
+      imageSrc: 'https://static.docs.com/ui/media/product/azure/virtual-machine.svg'
+      azureCategories:
+        - compute
+      url: ./virtual-machines/spot-vms.md
     - title: Azure Spring Cloud
       summary: "Un servicio de Spring\_Cloud completamente administrado, creado y operado con Pivotal"
       imageSrc: 'https://static.docs.com/ui/media/product/azure/spring-cloud.svg'
